unpackaged/main/default/objects/Competitor__c/Competitor__c.object-meta.xml
<CustomObject>
    <label>Competitor</label>
    <nameField>
        <displayFormat>CO-{00000}</displayFormat>
        <label>Competitor Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>