unpackaged/main/default/objects/Competitor__c/fields/Incumbent_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Incumbent_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this box if this vendor is currently in use within this account/prospect</inlineHelpText>
    <label>Incumbent Vendor</label>
    <type>Checkbox</type>
</CustomField>