unpackaged/main/default/objects/Competitor__c/fields/Position_in_Deal__c.field-meta.xml
<CustomField>
    <fullName>Position_in_Deal__c</fullName>
    <inlineHelpText>What is the position of strength for this vendor in this opportunity</inlineHelpText>
    <label>Position in Deal</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Strong</fullName>
            </value>
            <value>
                <fullName>Weak</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>