unpackaged/main/default/objects/Competitor__c/fields/Strengths__c.field-meta.xml
<CustomField>
    <fullName>Strengths__c</fullName>
    <inlineHelpText>Outline the key strengths the customer perceives of this vendor</inlineHelpText>
    <label>Strengths</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>