unpackaged/main/default/objects/Competitor__c/fields/Strengths_Importance__c.field-meta.xml
<CustomField>
    <fullName>Strengths_Importance__c</fullName>
    <inlineHelpText>How do the strengths of this vendor help to meet the needs of the user and their workflows in ways that Gearset can&#39;t? (JTBD)</inlineHelpText>
    <label>Why strengths important for the user?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>