unpackaged/main/default/objects/Competitor__c/fields/Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Weaknesses__c</fullName>
    <inlineHelpText>Outline the weaknesses perceived by this customer of this vendor</inlineHelpText>
    <label>Weaknesses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>